whitespace issue

--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ body{
 .container{
   height: 100vh;
   width: 100vw;
+  height: --webkit-fill-available;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 0;
-  padding: 2rem 0;
+  
 }
 
 .container h1{
